# DutchAnalyzer

./: .gitignore  LICENSE.md  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
dutchanalyzer/: config.py  dataset.py
models/: db_setup.py  models.py
notebooks/: log.xlsx  to_do.txt
notebooks/1_preprocessing/: 1-1_en_wikt.ipynb  1-2_strip_cols.ipynb  1-3_parse_translations.ipynb  1-4_trimming_rough_merged.ipynb  1_1-json_file_intake.ipynb  json_tests.py
notebooks/2_exploration/: 2_1-data_structure_exploration.ipynb  2_1-postprocessed_json-en.ipynb  2_2-compare_raw_processed.ipynb  log.md
notebooks/3_cleaning/: 3-2_flatten_definitions.ipynb  3_0-follow_up_filtering.ipynb  3_1-extract-definitions.ipynb  3_1-extract-one-word-defs.ipynb  3_2-flatten_definitions.ipynb  3_3-simple_translations_pairing.ipynb  3_4-form_extraction.ipynb  3_5-affix_extraction.ipynb  3_6-database_setup.ipynb  cleaning_log.md
notebooks/4_analysis/: 4-1_word_similarity.ipynb  4-2_single_letter_replacements.ipynb  replacemant_rules.py
reference/: wiktextract_schema.md  wiktionary_data_structure.md
reference/morphology/: replacement_rules.md  wikiwoordenboek_refs.md
src/dutchanalyzer/: __init__.py  config.py  dataset.py  json_utils.py  utils.py
src/dutchanalyzer/scripts/: wiktextract_utils.py
src/dutchanalyzer/scripts/archive/: utils_archived_5-11-25.py
src/dutchanalyzer/utilities/: bool_filters.py  database_utils.py  json_utils.py  pandas_utils.py  replacement_utils.py  util_vars.py  utils.py
tests/: dutch_verbs.py  structure_data_types.py
